# doctools

./: .gitignore  COMMAND_LINE.md  CVAT_GettingStarted.md  MyPSUtils.ps1  README.md  doctools.code-workspace  downvideo.py  export_cvat.py  extractFaces.py  folder2html.py  folder2pptx.py  p14.json  p14.txt  pdfextract.py  pdfmerge.py  pdfocr.py  pyproject.toml  reviewFaces.py  sumai.py  xlstool.py
